# embedding-topic-evaluator

./: .gitignore  README.md  pyproject.toml  requirements.txt
data_topic_mixing/input/: BERTopic.json
data_word_intrusion/input/: BERTopic_v2.json
data_word_intrusion/output/: annotations.json
jupyter/: Untitled.ipynb  metrics_20newgroups.ipynb  metrics_ag_news.ipynb  retrieval.ipynb  retrieval_opti.ipynb  testTop2vec.ipynb  topic_mixing.ipynb  word_intrusion.ipynb
jupyter/.ipynb_checkpoints/: retrieval-checkpoint.ipynb
label_studio/: topic_mixing.ipynb  word_intrusion.ipynb
label_studio/data_topic_mixing/output/: annotations.json
label_studio/data_word_intrusion/input/: tasks.json
label_studio/data_word_intrusion/output/: annotations.json
research/bertTopic/20news/: metrics_20newgroups.ipynb
research/bertTopic/ClusTREC-Covid/: metrics_ClusTREC-Covid.ipynb
research/bertTopic/ag_news/: metrics_ag_news.ipynb
research/bertTopic/arxiv-clustering-s2s/: metrics_arxiv-clustering-s2s.ipynb
research/bertTopic/big-patent-clustering/: metrics_big-patent-clustering.ipynb
research/bertTopic/biorxiv-clustering-p2p/: metrics_biorxiv-clustering-p2p.ipynb
research/top2Vec/20news/: metrics_20newgroups.ipynb
research/top2Vec/ClusTREC-Covid/: metrics_ClusTREC-Covid.ipynb
research/top2Vec/ag_news/: metrics_ag_news.ipynb
research/top2Vec/arxiv-clustering-s2s/: metrics_arxiv-clustering-s2s.ipynb
research/top2Vec/big-patent-clustering/: metrics_big-patent-clustering.ipynb
script/: analyse.py  config.conf
(+1 files in other folders)
